resolve issues with scroll on mobile Chrome

--- a/web/src/App.scss
+++ b/web/src/App.scss
@@ -53,9 +53,7 @@ body {
 
   overflow: hidden;
   position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   height: 100%;
   touch-action: none;
 }
